<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/titulo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputBolivianos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0"
        android:hint="@string/hint_bolivianos"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <!-- Lista de conversiones -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <!-- DÓLARES -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolares"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_dolares"
                android:src="@drawable/dol325" />

            <TextView
                android:id="@+id/outputDolares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- YENES -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yenes"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_yenes"
                android:src="@drawable/yen325" />

            <TextView
                android:id="@+id/outputYenes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- WONES -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wones"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_wones"
                android:src="@drawable/won325" />

            <TextView
                android:id="@+id/outputWones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- CHILENOS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chilenos"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_chilenos"
                android:src="@drawable/chile325" />

            <TextView
                android:id="@+id/outputChilenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- EUROS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_euros"
                android:src="@drawable/euro325" />

            <TextView
                android:id="@+id/outputEuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- YUANES -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuanes"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_yuanes"
                android:src="@drawable/yuan325" />

            <TextView
                android:id="@+id/outputYuanes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- REALES -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reales"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_reales"
                android:src="@drawable/real325" />

            <TextView
                android:id="@+id/outputReales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- LIBRAS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libras"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_libras"
                android:src="@drawable/libra325" />

            <TextView
                android:id="@+id/outputLibras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- RUPIAS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupias"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_rupias"
                android:src="@drawable/rupia325" />

            <TextView
                android:id="@+id/outputRupias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>

        <!-- FRANCOS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/francos"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/descrip_francos"
                android:src="@drawable/franco325" />

            <TextView
                android:id="@+id/outputFrancos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/btn_convertir"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/btn_limpiar"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>